--- a/todo.txt
+++ b/todo.txt
@@ -61,4 +61,13 @@ Add
   publisher={Frontiers}
 }
 
+@article{Suprabaetal2016,
+  title={Climate influence on oil sardine and {I}ndian mackerel in southeastern {A}rabian {S}ea},
+  author={Supraba, Vasu and Dineshbabu, Aaythan Puthiyapurayil and Thomas, Sujitha and Rohit, Prathibha and Rajesh, Kothanahally Mallegowda and Zacharia, Payiyappanal Ulahannan},
+  year={2016},
+  journal={International Journal of Development Research},
+  volume={6},
+  pages = {9152-9159}
+  }
+
 Fix {N}in\~{o}
