--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -31,12 +31,16 @@ bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast"
 Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013]. Like other sardines, the Indian oil sardines show strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
 
 <!-- indian oil sardine is important -->
-The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
+The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] is thought to act as either a direct or indirect cue for spawning.  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST). SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, prediction, upwelling) which in turn impact oil sardines, and correlations have been found between ONI peaks and landings peaks with a 9- to 12-month lag [@Rohitetal2018]. 
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] are thought to act as either a direct or indirect cue for spawning.  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST). SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings with a 9- to 12-month lag [@Rohitetal2018]. 
 
-In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys landing sites along the coast and was first implemented in the 1950s [@Srinathetal2005], however Yearly catch-at-length data are not available prior to 2001 and neither are stock size estimates nor fisheries independent data. Thus traditional length- or age-structured models (e.g. Virtural Population Analysis) are not possible. Instead we use time-series models with covariates to model landings.   Modeling and forecasting landings data using time-series models has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Pristaetal2011; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to understand the variables associated with catch fluctuations and can be used to provide forecasts that assist fisheries planning.  Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.  We also specifically focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use remote sensing data to improve catch forecasts. 
+In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in oil sardine landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys landing sites along the southeast Indian coast and was first implemented in the 1950s [@Srinathetal2005]. This is purely a landings time series. Catch-at-length data are not available prior to 2001. Effort data are indirect (boat composition of the fishery) and appropriate effort data (estimates of number of trips or hours fishing) are only available in a few recent years.  In addition, stock size estimates and fisheries independent data are unavailable. Thus traditional length- or age-structured models (e.g. virtual population analysis) which produce biomass estimates are not possible. Instead we use statistical models with covariates to model and produce a one-year ahead forecast of landings. Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.  We also specifically focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use remote sensing data to improve catch forecasts. 
+
+Modeling and forecasting landings data using statistical models fit to annual or seasonal catch time series has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Pristaetal2011; @FarmerFroeschke2015; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to identity the variables correlated with catch fluctuations and can be used to provide landings forecasts which are useful for fishery managers and the fishing industry. An example of the former is using catch forecasts to set or give warnings of seasonal fishery closures if the forecasted catch is higher than the allowed catch limits [@FarmerFroeschke2015]. An example of the latter is the annual Gulf and Atlantic menhaden forecast produced by NOAA Fisheries; the report is titled, "Forecast for the 20XX Gulf and Atlantic purse-seine fisheries and review of the 20XX fishing season".  A multiple regression model with environmental covaraites, similar to the model used in our paper, was developed by NOAA Fisheries in the 1970s [@Schaafetal1975]. This model has been used for the last 45 years to produce an annual forecast of menhaden landings. This forecast was requested by the menhaden fishing industry and has been used for planning purposes by the industry, not only the fishers but also fish catch sellers and buyers, businesses which provide fisheries gear, and banks which provide financing [@Hansenetal2006].
+
+The goal of the work presented here is to determine the environmental covariates which explain catch variability and improve the accuracy of catch forecasts. Landings of oil sardines are determined by biomass, catchability, and effort. Catchability is mainly determined by the inshore versus offshore distribution of the sardine. The fishery is restricted to the nearshore < 50 km offshore [@Rohitetal2018] and when the sardines move offshore to spawn or to avoid hypoxic or excessive warm water, they are no longer available to the fishery. Thus the environment has a strong impact on catchibility. Recruitment and survival tied to the the environmental factors which determine food resources. The covariates studied are directly linked to known and conjectured connections between the environment and oil sardine that are expected to affect catch. This work is part of a joint research project between US and Indian research agencies: the National Marine Fisheries Service, NOAA, USA and the Indian National Centre for Ocean Information Services and the Centre for Marine Living Resources and Ecology, in the Ministry of Earth Sciences, India. The project objective is to develop a operational forecast of sardine landings, to be used by the Indian fishery industry for planning.
 
 
 <!-- Based on biological information concerning how environmental conditions in the coastal waters affect spawning density, exposure of sardines to the coastal fishery, and larval and juvenile sardine survival, we develop a set of hypotheses about which remote sensing covariates should correlate with current or future landings.  We use generalized additive modelling of the landing data with remote sensing covariates to test for these correlations.  -->
@@ -57,6 +61,13 @@ After eggs are spawned, they develop rapidly into larvae [@Nair1959].  The phyto
 
 Catches along the Kerala coast are high throughout the year except during quarter 2, March-May (Figure `r ref("fig:catch")`). The age-distribution caught by the fishery varies through the year.  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is first dominated by 1-2.5 year old mature fish [@AntonyRaja1969; @Bensam1964a; @Nairetal2016].   In August or September a spike of 0-year (40mm) juveniles from the June spawning typically appears in the catch [@AntonyRaja1969;  @Nairetal2016] and another spike of 0-year fish is sometimes seen in February from the late fall spawning [@PrabhuDhulkhed1967; @PrabhuDhulkhed1970].  From October through July, the catch is dominated by fish from 120mm-180mm [@PrabhuDhulkhed1970; @AntonyRaja1970; @Nairetal2016] which is a mix of 0-year, 1-year and 2-year fish [@Nairetal2016; @Rohitetal2018].  
 
+## Contrast between catch modeling versus biomass modeling
+
+Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Nonetheless the number of boats and fishers involved in the fishery has been increasing as the population in Kerala has increased. Oil sardines are caught primarly by ring seines, which was introduced in the early 1980s. Ring seines of different sizes are used both both traditional small boats with a small outboard motor and large mechanized ships [@DasEdmin2018]. Since 1985, the ring seine fishery has expanded steadily in terms of horsepower, size of boats, length of nets. There are concerns that overfishing and especially catch of juveniles, which are at time discarded [@DasEdmin2018] is a factor in the most recent oil sardine declines [@Kripaetal2018].
+
+The actual effort in the fishery is complex. It depends both on the fleet size and composition, but also depends on the fishers decisions about what species to fish for, where to fish for them (which affects transit time versus fishing time), 
+
+
 <!-- What is happening each quarter 
 Catch is reported quarterly not monthly. Along the west coast, the length composition of catches ranges between 50-220mm. 1st year spawners (140-160 mm) enter the fishery during June/July and as the season progresses to September-December, adults occur in reduced quantities and catches are dominated by age-1 juveniles (120-140 mm) that were spawned in the prior season (citation). Seasons of rainfall extremes (weak or intense) cause recruitment failure, while a daily rainfall of 20-30 mm during June-August along the southwest coast may indicate good recruitment to the fishery (citation).
 -->
@@ -70,7 +81,8 @@ As the success of commercial fishery for each season is determined by the number
 
 ## Sardine landing data
 
-Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design that takes into account landing centers, number of fishing days, and boat net combinations in fishing operations [@Srinathetal2005]. The quarterly landings for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the seasonal variance. 
+Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design [@Srinathetal2005]. The survey visits the fish landing centers along the entire southeast coast of India and samples the catch from the variety of boat types and gear types used in the coastal fishery. Landings estimates are available for all the coastal states, however we model the catch for the state of Kerala only, where the longest time series is available and the overwhelming majority of oil sardines are landed (Figure `r ref("fig:catch")`). Kerala contributes a remarkable 14.4% of the total marine production (CMFRI, 2017) and Major resources contributing to the pelagic landings were oilsardine (57.4%). The quarterly landings (metric tons) for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the variance. Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Our analysis uses landings not catch-per-unit effort as is standard in landings modeling with the goal of landings forecasting. Landings are a function of both biomass and catchability, but the goal in our study is to describe and forecast landings, not biomass. 
+
 
 <!--
 
@@ -220,7 +232,7 @@ catchmeds=round(tapply(dat$Kerala, dat$Qtr, median, na.rm=TRUE))
 names(catchmeds)=paste("Q",1:4,sep="")
 ```
 
-Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
+Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-September and that the fishery is closed July 1 to August 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
 
 Figure `r ref("fig:cartoon")`.  The sardine life-cycle in the Southeast Arabian Sea and how it interacts with the fishery. 
 
