--- a/setup.Rmd
+++ b/setup.Rmd
@@ -32,6 +32,8 @@ CatchWin=stats::filter(oilsardine_qtr[[reg]],c(0,1,1,0),sides=1)[seq(6,dim(oilsa
 respdat$CatchWin0 = c(CatchWin,NA)
 CatchSum=stats::filter(oilsardine_qtr[[reg]],c(1,0,0,1),sides=1)[seq(6,dim(oilsardine_qtr)[1],4)]
 respdat$CatchSum0 = c(CatchSum,NA)
+CatchCal=oilsardine_yr[[reg]]
+respdat$CatchCal0 = CatchCal
 
 #add Catch - spawners
 respdat$nspawners0 = respdat$Catch0 - respdat$spawners0
@@ -39,10 +41,26 @@ respdat$nspawners0 = respdat$CatchWin0
 
 respdat=log(respdat)
 
+respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
+
+#make sure the lengths match
+respdat=respdat[respdat$Year<=max(seio_covariates_mon$Year),]
+
   covnames=c(
-    "log.CHL.4","log.CHL.5",
-    "log.CHL.4","log.CHL.5",
-    "log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.2","log.CHL.3","log.CHL.4","log.CHL.5",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
+    "log.CHL.7","log.CHL.8","log.CHL.9","log.CHL.10",
     "SST.UPW.5","SST.UPW.4",
     "SST.UPW.5","SST.UPW.4",
     "SST.UPW.5","SST.UPW.4",
@@ -69,9 +87,20 @@ respdat=log(respdat)
    "precip.gpcp.kerala", "precip.gpcp.kerala",
    "ONI")
   covmon=list(
-     7:9,7:9,
-     1:3,1:3,
-     10:12,10:12,
+     7:9,7:9,7:9,7:9,
+     1:3,1:3,1:3,1:3,
+     10:12,10:12,10:12,10:12,
+     9:10,9:10,9:10,9:10,
+     6:9,6:9,6:9,6:9,
+     1:12,1:12,1:12,1:12,
+     3:5,3:5,3:5,3:5,
+     7:9,7:9,7:9,7:9,
+     1:3,1:3,1:3,1:3,
+     10:12,10:12,10:12,10:12,
+     9:10,9:10,9:10,9:10,
+     6:9,6:9,6:9,6:9,
+     1:12,1:12,1:12,1:12,
+     3:5,3:5,3:5,3:5,
      6:9,6:9,
      1:3,1:3,
      4:6,4:6,
@@ -130,9 +159,15 @@ for(i in 1:length(covnames)){
   }
 }
 for(j in c("mon9to10.0", "mon6to9.0", "mon1to12.0", "mon3to5.0",  "mon10to12.0",  "mon7to9.0")){
-  varname=paste0("SST.",c(2:5),".",j)
+  varname=c(paste0("SST.",c(2:5),".",j))
   tmp=apply(respdat[,varname],1,mean,na.rm=TRUE)
   varname=paste0("SST.2.10.",j)
+  respdat[[varname]]=tmp
+}
+for(j in c("mon9to10.0", "mon6to9.0", "mon1to12.0", "mon3to5.0",  "mon10to12.0",  "mon7to9.0")){
+  varname=c(paste0("log.CHL.",c(2:5,7:10),".",j))
+  tmp=apply(respdat[,varname],1,mean,na.rm=TRUE)
+  varname=paste0("log.CHL.2.10.",j)
   respdat[[varname]]=tmp
 }
 
@@ -143,20 +178,25 @@ for(i in colnames(respdat)){
   name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
   respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
 }
-#make 3 year runsum of SST
+#make 2.5 year runsum of SST
 tmp=(respdat[,"SST.2.10.mon1to12.0"]*12 - respdat[,"SST.2.10.mon10to12.0"]*3 - respdat[,"SST.2.10.mon7to9.0"]*3) +
     respdat[,"SST.2.10.mon1to12.1"]*12 +
     respdat[,"SST.2.10.mon1to12.2"]*12
 varname="SST.2.10.3.yr.runsum.0"
 respdat[[varname]]=tmp/(12+12+6)
-for(i in "SST.2.10.3.yr.runsum.0"){
+#make 2 year runsum of SST
+tmp=(respdat[,"SST.2.10.mon1to12.0"]*12 +
+    respdat[,"SST.2.10.mon1to12.1"]*12 + 
+    respdat[,"SST.2.10.mon1to12.2"]*12)
+varname="SST.2.10.2.yr.runsum.0"
+respdat[[varname]]=tmp/(12+12+12)
+#create the lag 1
+for(i in c("SST.2.10.3.yr.runsum.0","SST.2.10.2.yr.runsum.0")){
   name=paste(str_sub(i, 1, str_length(i)-1),"1",sep="")
   respdat[[name]]=c(NA,respdat[[i]][1:(dim(respdat)[1]-1)])
   name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
   respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
 }
-
-respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
 
 fullrespdat = respdat
 ```
@@ -185,7 +225,11 @@ covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.",
              "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
              "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
 #set up to use consistent data
-dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "nspawners2", "spawners0", "spawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
+dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "nspawners2", 
+                   "spawners0", "spawners1", "spawners2", 
+                   "CatchCal0","CatchCal1",
+                   paste(covnames, "0", sep=""), 
+                   paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
 dat.nonspawners=dat
 if(any(diff(dat.nonspawners$Year)!=1))
@@ -215,6 +259,27 @@ dat=fullrespdat[,c("Year", "spawners0", "nspawners0","nspawners2",
 dat=na.omit(dat)
 dat.chl=dat
 if(any(diff(dat.chl$Year)!=1))
+  stop("Problem in setup.Rmd.  The covariate data.frame cannot have any missing years.")
+rm(dat) #make sure I don't accidentally forget to define dat
+```
+
+```{r message=FALSE,warning=FALSE, echo=FALSE}
+covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.", 
+             "SST.4.mon1to12.", "SST.4.mon6to9.", 
+             "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", 
+             "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
+             "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", 
+             "SST.2.10.mon1to12.", 
+             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
+             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.",
+             "SST.2.10.2.yr.runsum.")
+#set up to use consistent data
+dat=fullrespdat[,c("Year","CatchCal0","CatchCal1",
+                   paste(covnames, "0", sep=""), 
+                   paste(covnames, "1", sep=""))]
+dat=na.omit(dat)
+dat.calendar=dat
+if(any(diff(dat.calendar$Year)!=1))
   stop("Problem in setup.Rmd.  The covariate data.frame cannot have any missing years.")
 rm(dat) #make sure I don't accidentally forget to define dat
 ```
