updating Hyp Table

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -34,7 +34,11 @@ Environmental variability is known to be a key driver of population variability 
 The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] are thought to act as either a direct or indirect cue for spawning.  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST). SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings with a 9- to 12-month lag [@Rohitetal2018]. 
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002].  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST). SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings with a 9- to 12-month lag [@Rohitetal2018]. 
+
+<!--
+Mury and Edelman used atmospheric presure differential as the metric of monsoon intensity and found a different pattern. Effect of monsoon was negative up to a theshold and then effect was positive after that. They gave a weird explaination. Low DO was bad up to the theshold but after threshold, it increased producivity. Used 1928-1955 landings.
+-->
 
 In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in oil sardine landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys landing sites along the southeast Indian coast and was first implemented in the 1950s [@Srinathetal2005]. This is purely a landings time series. Catch-at-length data are not available prior to 2001. Effort data are indirect (boat composition of the fishery) and appropriate effort data (estimates of number of trips or hours fishing) are only available in a few recent years.  In addition, stock size estimates and fisheries independent data are unavailable. Thus traditional length- or age-structured models (e.g. virtual population analysis) which produce biomass estimates are not possible. Instead we use statistical models with covariates to model and produce a one-year ahead forecast of landings. Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.  We also specifically focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use remote sensing data to improve catch forecasts. 
 
@@ -59,7 +63,7 @@ The Indian oil sardine fishery is restricted to the narrow strip of the western 
 
 After eggs are spawned, they develop rapidly into larvae [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the summer monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish (40mm to 100mm) from early spawning appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow, and the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the summer monsoon returns, the oil sardine cycle begins anew.
 
-Catches along the Kerala coast are high throughout the year except during quarter 2, March-May (Figure `r ref("fig:catch")`). The age-distribution caught by the fishery varies through the year.  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is first dominated by 1-2.5 year old mature fish [@AntonyRaja1969; @Bensam1964a; @Nairetal2016].   In August or September a spike of 0-year (40mm) juveniles from the June spawning typically appears in the catch [@AntonyRaja1969;  @Nairetal2016] and another spike of 0-year fish is sometimes seen in February from the late fall spawning [@PrabhuDhulkhed1967; @PrabhuDhulkhed1970].  From October through July, the catch is dominated by fish from 120mm-180mm [@PrabhuDhulkhed1970; @AntonyRaja1970; @Nairetal2016] which is a mix of 0-year, 1-year and 2-year fish [@Nairetal2016; @Rohitetal2018].  
+Catches along the Kerala coast are high throughout the year except during quarter 2, April-June (Figure `r ref("fig:catch")`). The age-distribution caught by the fishery varies through the year.  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is first dominated by 1-2.5 year old mature fish [@AntonyRaja1969; @Bensam1964a; @Nairetal2016].   In August or September a spike of 0-year (40mm) juveniles from the June spawning typically appears in the catch [@AntonyRaja1969;  @Nairetal2016] and another spike of 0-year fish is sometimes seen in February from the late fall spawning [@PrabhuDhulkhed1967; @PrabhuDhulkhed1970].  From October through June, the catch is dominated by fish from 120mm-180mm [@PrabhuDhulkhed1970; @AntonyRaja1970; @Nairetal2016] which is a mix of 0-year, 1-year and 2-year fish [@Nairetal2016; @Rohitetal2018].  
 
 ## Contrast between catch modeling versus biomass modeling
 
@@ -182,15 +186,18 @@ The results on model structure were similar for models of the post-monsoon landi
 
 ## Environmental covariates as explanatory variables
 
-There was no support for using precipitation during the summer monsoon (June-July) or pre-monsoon period (April-May) as an explanatory variable  for the quarter 3 (July-September) or post-monsoon (October-March) catch (hypotheses S1 and S2; Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either precipitation during monsoon (June-July) or pre-monsoon (April-May) were used as the covariate. Quarter 3 overlaps with the spawning period and precipitation is often thought to trigger spawning, however we were unable to find any consistent association of catch during these spawning and early-post spawning months with precipitation. We also found no correlation between post-monsoon SST in the prior year (hypothesis L1) or the ONI index (hypothesis A2) for either July-September or post-monsoon catch (Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).
+There was no support for using precipitation during the summer monsoon (June-July) or pre-monsoon period (April-May) as an explanatory variable  for the quarter 3 (July-September) or post-monsoon (October-March) catch (hypotheses S1 and S2; Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, and if either precipitation during monsoon (June-July) or pre-monsoon (April-May) were used as the covariate. Quarter 3 overlaps with the spawning period and precipitation is often thought to trigger spawning, however we were unable to find any consistent association of catch during these spawning and early-post spawning months with precipitation. Raja [-@AntonyRaja1974] posited that the appropriate time period for the affect of rainfall is the weeks before and after the new moon when spawning is postulated to occur and not the total rainfall during the monsoon season. Thus the lack of correlation may be due to using too coarse of a time average for the precipitation.
 
-However, we found significant correlation between the summer monsoon upwelling indices in the current season: average nearshore SST along the Kerala coast during June-September and the average SST nearshore versus offshore differential (UPW) off Kochi in June-September (Table `r ref("tab:covariate-models")`, Table `r ref("tabappB:spawner-model-sst", pre="B")` and Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). These two upwelling indices are correlated but not identical. The model with average June-September nearshore SST was more supported than the model using the SST differential off Kochi. For July-September catch, this model with a non-linear response had an adjusted $R^2$ of 41.0 versus an adjusted $R^2$ of 24.4 for the model with no covariates (Table `r ref("tabappB:spawner-model-sst", pre="B")`), and for October-March catch, the adjusted $R^2$ was 61.8 versus 56.6 (Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). Note, that this covariate is June-September in the current season overlaps with the July-September catch. Thus this model cannot be used to forecast July-September catch but does help us understand what factors may be influencing catch during the monsoon.
+The sea-surface temperature before spawning (March-May) has been speculated to be correlated with successful egg development and spawning behavior (hypothesis S4 and S5) and extreme heat events pre-spawning have been associated with low recruitment. This suggests that March-May in the current and prior years should be associated with low catch. The sea-surface temperature during larval and early juvenile development (October-December) may affect survival and growth in multiple ways and thus could correlated with biomass in future years (hypothesis L1). However we found no support for either of these SST variates as explanatory variables for the July-September catch and only weak support (based on AIC) for March-May SST in the current season for explaining variability in post-monsoon catch. The fall average SST in the prior season did not explain variability in either July-September or October-March catch. See  Tables `r ref("tabappB:spawner-model-sst", pre="B")` and `r ref("tabappB:nonspawner-model-sst", pre="B")`.
 
-The sea-surface temperature before spawning (March-May) has been speculated to be correlated with successful egg development and spawning behavior (hypothesis S4 and S5) and extreme heat events pre-spawning have been associated with low recruitment. This suggests that March-May in the current and prior years should be associated with low catch. The sea-surface temperature during larval and early juvenile development (October-December) affects survival and growth in multiple ways and thus could correlated with biomass in future years (hypothesis L1). There was no support for either of these variates as explanatory variables for the July-September catch and only weak support (based on AIC) for March-May SST in the current season for explaining variability in post-monsoon catch. The fall average SST in the prior season did not explain variability in either July-September or October-March catch. See  Tables `r ref("tabappB:spawner-model-sst", pre="B")` and `r ref("tabappB:nonspawner-model-sst", pre="B")`.
+We also found no correlation between the ONI index (hypothesis A2) for either July-September or post-monsoon catch (Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).
 
-The average sea surface temperature over multiple prior years has been found to be correlated with sardine recruitment in Pacific sardines  [@JacobsonMacCall1995; @Checkleyetal2017; @Lindegrenetal2013] and southern African sardines [@Boyeretal2001]. We tested as a model covariate the average SST for 2.5 years prior to the July-September catch, so January-June in the current calendar year and the two prior calendar years for a 30-month average. This covariate can be used for forecasting since it does not overlap with either July-September or October-March catch.  This variate with a non-linear response was best covariate for both the July-September and the post-monsoon catch. For post-monsoon catch, the model with SST had an adjusted $R^2$ of 67.5 versus 56.6 without. For the July-September catch, the adjusted $R^2$ was 41.0 with SST and 24.4 without.  The response curve was step-like with a negative effect at low temperatures and then an positive flat effect at higher temperatures (Figure `r ref("fig:cov-effects")`).  This is similar to the step-response found in studies of the correlation between average SST and recruitment in Pacific sardines [@JacobsonMacCall1995]. 
+Instead we found with the covariates indirectly and directly associated with productivity and food availability: upwelling intensity and surface chlorophyll. The correlation between landings and upwelling was only found for upwelling in the current season. No correlation was found when we used the upwelling index from the prior season. The correlation between landings and upwelling was found for both July-September and October-March landings and with either upwelling index: average nearshore SST along the Kerala coast during June-September or the average SST nearshore versus offshore differential (UPW) off Kochi in June-September (Table `r ref("tab:covariate-models")`, Table `r ref("tabappB:spawner-model-sst", pre="B")` and Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). These two upwelling indices are correlated but not identical. The model with average June-September nearshore SST was more supported than the model using the SST differential off Kochi. For July-September catch, this model with a non-linear response had an adjusted $R^2$ of 41.0 versus an adjusted $R^2$ of 24.4 for the model with no covariates (Table `r ref("tabappB:spawner-model-sst", pre="B")`), and for October-March catch, the adjusted $R^2$ was 61.8 versus 56.6 (Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). Note, that this covariate is June-September in the current season and overlaps with the July-September catch. Thus this model cannot be used to forecast July-September catch but does help us understand what factors may be influencing catch during the monsoon.
 
-Chlorophyll-a density is speculated to be an important predictor of larval sardine survival  and growth.  In addition, sardines shoal in response to coastal chlorophyll blooms, which brings them in contact with the coastal fisheries.  Thus chlorophyll-a density is assumed to be an important driver of future or current sardine catches.  We had chlorophyll-a remote sensing data only from 1998 onward.  Our simplest covariate model required 5 degrees of freedom, thus we were limited in the analyses we could conduct.  In addition, the years, 1998-2014, have relatively low variability in catch sizes; the logged catch sizes during this period range from 10-11 during quarter 3 and 11-12 during the other three quarters.  Second degree polynomial models were fit (Appendix C) to the average log chlorophyll-a density in the current and prior season from quarter 3 (July-September), 4 (October-December), and 1 (January-March).  Chlorophyll-a density was not a significant predictor for the spawning catch for any of the tested combinations of current or prior season and quarter.  The only significant effect was seen for post-summer monsoon catches using chlorophyll-a density in October-December of the current and prior season (Table `r ref("tabappC:nonspawner-model", pre="C")`).  This matches results which found that the upwelling index in October-December of the prior season was a predictor for the post-summer monsoon catch.  The SST-based upwelling index and chlorophyll-a density are both indices of low-trophic level productivity.
+Chlorophyll-a density is speculated to be an important predictor of larval sardine survival  and growth.  In addition, sardines shoal in response to coastal chlorophyll blooms, which brings them in contact with the coastal fisheries.  Thus chlorophyll-a density is assumed to be an important driver of future or current sardine catches.  We had chlorophyll-a remote sensing data only from 1998 onward.  Our simplest covariate model required 5 degrees of freedom, thus we were limited in the analyses we could conduct.  In addition, the years, 1998-2014, have relatively low variability in catch sizes; the logged catch sizes during this period range from 10-11 during quarter 3 and 11-12 during the other three quarters.  Second degree polynomial models were fit (Appendix C) to the average log chlorophyll-a density in the current and prior season from quarter 3 (July-September), 4 (October-December), and 1 (January-March).  Chlorophyll-a density was not a significant predictor for the July-September catch for any of the tested combinations of current or prior season and quarter.  The only significant effect was seen for post-summer monsoon catches using chlorophyll-a density in October-December of the prior season (Table `r ref("tabappC:nonspawner-model", pre="C")`).  This is in contrast to the results with monsoon upwelling indices, which found a correlation with the current season but not prior seasons.
+
+The strongest correlation however was found with the multi-year average sea surface temperature for the nearshore waters off Kerala (latitude 8 to 11). The average sea surface temperature over multiple prior years has been found to be correlated with sardine recruitment in Pacific sardines  [@JacobsonMacCall1995; @Checkleyetal2017; @Lindegrenetal2013] and southern African sardines [@Boyeretal2001]. We tested as a model covariate the average SST for 2.5 years prior to the July-September catch, so January-June in the current calendar year and the two prior calendar years for a 30-month average. This covariate can be used for forecasting since it does not overlap with either July-September or October-March catch.  This variate with a non-linear response was best covariate for both the July-September and the post-monsoon catch. For post-monsoon catch, the model with SST had an adjusted $R^2$ of 67.5 versus 56.6 without. For the July-September catch, the adjusted $R^2$ was 41.0 with SST and 24.4 without.  The response curve was step-like with a negative effect at low temperatures and then an positive flat effect at higher temperatures (Figure `r ref("fig:cov-effects")`).  This is similar to the step-response found in studies of the correlation between average SST and recruitment in Pacific sardines [@JacobsonMacCall1995]. 
+
 
 # Discussion
 
