--- a/Table_Hypotheses.Rmd
+++ b/Table_Hypotheses.Rmd
@@ -20,92 +20,92 @@ fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
 
 DD1 = data.frame(
   Hyp="DD1.  $S_t \sim N_{t-1}$",
-  Des = "$S_t$ is age 1+ age fish and reflects the 0-2yr fish in $N_{t-1}$ which have aged 3-6 months.",
+  Des = "$S_t$ is age 1+ age fish and reflects the 0-2yr fish in $N_{t-1}$ which have aged 3-6 months (Nair et al. 2016).",
   Response="$S_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 DD2 = data.frame(
   Hyp="DD2. $S_t \sim S_{t-1} + S_{t-2}$ \n $N_t \sim S_{t-1} + S_{t-2}$",
-  Des = "$S_t$ is age 1+ fish and reflects the abundance of the spawning stock and cohort strength. If cohort strength persists over time, landings in the current season should correlate with landings in the previous two seasons.",
+  Des = "$S_t$ is age 1+ fish and is dominated by spent post-spawning fish (Nair et al. 2016). $S_t$ should be correlated with the abundance of the spawning stock and cohort strength. If cohort strength persists over time, landings in the current season should correlate with Jul-Sep landings in the previous two seasons.",
   Response="$S_t$ and $N_t$",
   Cov="$S_{t-1}$ and $S_{t-2}$",
   stringsAsFactors=FALSE)
 
 DD3 = data.frame(
   Hyp="DD3.  $N_t \sim N_{t-1}$",
-  Des = "$N_{t-1}$ includes age 0, 1, 2 and 2+ fish. Thus the 0, 1, and 2 yr fish will appear 1 year later in the $N_t$ landings.",
+  Des = "$N_{t-1}$ includes age 0, 1, 2 and 2+ fish (Nair et al. 2016). Thus the 0, 1, and 2 yr fish will appear 1 year later in the $N_t$ landings.",
   Response="$N_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 HS1 = data.frame(
-  Hyp="S1.  $S_t \sim$ Jun precipitation in year $t$",
-  Des = "The magnitude of precipitation in June-July signals mature fish to spawn offshore, after which the spent adults migrate inshore to the fishery.",
+  Hyp="S1.  $S_t \sim$ June-July precipitation in $t$",
+  Des = "The magnitude of precipitation in June-July directly or indirectly signals mature fish to spawn offshore, after which the spent adults migrate inshore to the fishery (Anthony Raja 1969, 1974; Srinath 1998).",
   Response="$S_t$",
   Cov="Jun-Jul precipitation in year $t$",
   stringsAsFactors=FALSE)
 
 HS2 = data.frame(
-  Life="Spawn",
-  Hyp="S2.  The level of precipitation in pre-monsoon months predicts spawning strength.",
+  Hyp="S2.  $S_t \sim$ Apr-Mar precipitation in $t$",
+  Des="If there is pre-monsoon rain during Apr-May then spawning begins earlier and spent adults return to the fishery sooner and are exposed to the fishery longer.",
   Response="$S_t$",
   Cov="Apr-May precipitation in year $t$",
   stringsAsFactors=FALSE)
 
 HS3 = data.frame(
-  Life="Spawn",
-  Hyp="S3.  Precipitation initiates and supports spawning. Spawning affects post-monsoon catch in current and future seasons.",
+  Hyp="S3.  $N_t \sim$ Apr-Mar precipitation in $t$",
+  Des="Precipitation is an indicator of climatic conditions during the period of egg development. This affect the success of spawning, thus affecting the 0-year class and the Oct-Mar catch (Antony Raja 1969, 1974; Srinath 1998).",
   Response="$N_t$",
   Cov="Apr-May and Jun-Jul precipitation in year $t$ and $t-1$",
   stringsAsFactors=FALSE)
 
 
 HS4 = data.frame(
-  Life="Spawn",
-  Hyp="S4.  Extremely high upwelling brings poorly oxygenated water and very low temperatures to the surface causing mature fish to avoid nearshore areas and leads to lower exposure to the fishery.",
+  Hyp="S4.  $S_t \sim$ Jun-Sep upwelling index in $t$",
+  Des="High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al 1991).",
   Response="$S_t$",
   Cov="Jun-Sep upwelling index in year $t$",
   stringsAsFactors=FALSE)
 
 HS5 = data.frame(
-  Life="Spawn",
-  Hyp="S5.  Extreme heat events in the pre-spawning months cause mature fish to move offshore away from productive feeding areas leading to poor spawning condition. Poor recruitment leads to few 0-age in post-monsoon catch and few 1-age fish in next season catch.",
+  Hyp="S5.  $S_t$ and $N_t$ $\sim$ SST during Mar-May $t$",
+  Des="Extreme heating events prior to the spring monsoon drives mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 year fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).",
   Response="$S_t$ and $N_t$",
   Cov="Nearshore Mar-May SST in year $t$ and $t-1$",
   stringsAsFactors=FALSE)
 
 HL1 = data.frame(
-  Life="Larval",
-  Hyp="L1.  Larval growth and survival is highest in an intermediate temperature window. The prior year post-monsoon larval survival and growth is associated with higher current year biomass.",
+  Hyp="L1.  $S_t$ and $N_t$ $\sim$ nearshore SST during Oct-Dec $t-1$",
+  Des="Larval and juvenile growth and survival is affected by temperature. The temperature in the critical post-monsoon window, when somatic growth of the 0-year fish is highest, should be correlated with future abundance.",
   Response="$N_t$ and $S_t$",
   Cov="Nearshore SST during Oct-Dec in year t-1",
   stringsAsFactors=FALSE)
 
 HL2 = data.frame(
-  Life="Larval",
-  Hyp="L2. Upwelling is associated with higher productivity and higher density of zooplankton, which leads to better larval and juvenile growth and survival.  The strength of summer upwelling should be associated with higher biomass in future years and the appearance of 0-age fish in post-monsoon catch. However, extremely strong upwelling brings poorly oxygenated water to the surface causing larval mortality and offshore advection and causes mature fish to move offshore.",
+  Hyp="L2.  $S_t$ and $N_t$ $\sim$ Jun-Sep upwelling index in $t-1$ and $t$",
+  Des="Higher upwelling rates leads to greater phytoplankton productivity, better larval and juvenile growth, and higher landings in the post monsoon Oct-March catch. However, extreme upwelling may decrease this catch, and future catches, due to poor oxygen conditions or advection of phytoplankton biomass.",
   Response="$N_t$ and $S_t$",
   Cov="Jun-Sep upwelling index in year $t-1$ and $t$",
   stringsAsFactors=FALSE)
 
 HL3 = data.frame(
-  Life="Larval",
-  Hyp="L3. Chlorophyll blooms are signatures of high productivity from nutrient influx either due to upwelling or coastal inputs.  The monsoon bloom intensity should be associated with 0-year fish abundance in year $t$ and future sardine biomass.",
+  Hyp="L3.  $S_t$ and $N_t$ $\sim$ Chl-a concentrations in $t-1$ and $t$",
+  Des="Surface Chl-a is a proxy for phytoplankton abundance and thus food availability, so higher bloom intensities may support greater fish abundance in the current and future years.",
   Response="$N_t$ and $S_t$",
   Cov="Chl-a density Jun-Sep in year $t-1$ and $t$ (for $N_t$)",
   stringsAsFactors=FALSE)
 
 HA2 = data.frame(
-  Life="All ages",
-  Hyp="A2. The changes brought about by the El Niño/Southern Oscillation (ENSO) cycle have a variety of effects on environmental parameters (precipitation, SST, thermal fronts, wind) which impacts spawning and early survival with a 1-year lag. ",
+  Hyp="A2.  $S_t$ and $N_t$ $\sim$ ONI in $t-1$",
+  Des="The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Rohit et al 2018).",
   Response="$N_t$ and $S_t$",
   Cov="ONI in year t-1",
   stringsAsFactors=FALSE)
 
 HA1 = data.frame(
-  Life="All ages",
-  Hyp="A1. The multi-year average SST is associated with a variety of factors which affect spawning and early survival and has been found to correlate with sardine recruitment (Checkley et al. 2017) and thus future biomass available to the fishery.",
+  Hyp="A1.  $S_t$ and $N_t$ $\sim$ 2.5-year average neashore SST",
+  Des="Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. This summary has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017).",
   Response="$N_t$ and $S_t$",
   Cov="3-year average SST",
   stringsAsFactors=FALSE)
