--- a/todo.txt
+++ b/todo.txt
@@ -9,11 +9,15 @@ Need to do influence analysis via cross-validation (LOO).  1994 catch is influen
 
 cross-validation test of the catch models
 
-Cut the cartoon of sardine life-cycle? Or need to improve the quality of the figure.
+show correlation between CHl and UPW?.
+
+add Chidambaram and Menon to refs and to section on plankton and SST cor
 
 fix Rohit 2018 ref in endnote when return to NWFSC
 
 Remove Jr. from Checkley
+
+Find summary review articles to cite. Rohit et al 2018, 
 
 add
 
